[gd_scene load_steps=2 format=3 uid="uid://error_display_001"]

[ext_resource type="Script" path="res://features/ui/components/error_display.gd" id="1"]

[node name="ErrorDisplay" type="PanelContainer"]
custom_minimum_size = Vector2(300, 100)
offset_right = 300.0
offset_bottom = 100.0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Error message"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="RetryButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Retry"

[node name="DismissButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Dismiss"
